--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "antd": "^5.8.6",
     "image-compressor": "^2.0.3",
     "instascan": "^1.0.0",
+    "npm-check-updates": "^16.14.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-qr-scanner": "^1.0.0-alpha.11",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
